--- a/FirmaKurierska/FirmaKurierska.csproj
+++ b/FirmaKurierska/FirmaKurierska.csproj
@@ -190,31 +190,24 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CarsController.cs" />
     <Compile Include="Controllers\ClientsController.cs" />
-    <Compile Include="Controllers\CouriersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\PackagesController.cs" />
-    <Compile Include="Controllers\WareHousesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201804180903406_imgProp.cs" />
-    <Compile Include="Migrations\201804180903406_imgProp.Designer.cs">
-      <DependentUpon>201804180903406_imgProp.cs</DependentUpon>
+    <Compile Include="Migrations\201805230940302_first.cs" />
+    <Compile Include="Migrations\201805230940302_first.Designer.cs">
+      <DependentUpon>201805230940302_first.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Car.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\Courier.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Package.cs" />
-    <Compile Include="Models\WareHouse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -280,31 +273,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\WareHouses\Create.cshtml" />
-    <Content Include="Views\WareHouses\Delete.cshtml" />
-    <Content Include="Views\WareHouses\Details.cshtml" />
-    <Content Include="Views\WareHouses\Edit.cshtml" />
-    <Content Include="Views\WareHouses\Index.cshtml" />
-    <Content Include="Views\Cars\Create.cshtml" />
-    <Content Include="Views\Cars\Delete.cshtml" />
-    <Content Include="Views\Cars\Details.cshtml" />
-    <Content Include="Views\Cars\Edit.cshtml" />
-    <Content Include="Views\Cars\Index.cshtml" />
     <Content Include="Views\Clients\Create.cshtml" />
     <Content Include="Views\Clients\Delete.cshtml" />
     <Content Include="Views\Clients\Details.cshtml" />
     <Content Include="Views\Clients\Edit.cshtml" />
     <Content Include="Views\Clients\Index.cshtml" />
-    <Content Include="Views\Couriers\Create.cshtml" />
-    <Content Include="Views\Couriers\Delete.cshtml" />
-    <Content Include="Views\Couriers\Details.cshtml" />
-    <Content Include="Views\Couriers\Edit.cshtml" />
-    <Content Include="Views\Couriers\Index.cshtml" />
-    <Content Include="Views\Orders\Create.cshtml" />
-    <Content Include="Views\Orders\Delete.cshtml" />
-    <Content Include="Views\Orders\Details.cshtml" />
-    <Content Include="Views\Orders\Edit.cshtml" />
-    <Content Include="Views\Orders\Index.cshtml" />
     <Content Include="Views\Packages\Create.cshtml" />
     <Content Include="Views\Packages\Delete.cshtml" />
     <Content Include="Views\Packages\Details.cshtml" />
@@ -328,8 +301,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201804180903406_imgProp.resx">
-      <DependentUpon>201804180903406_imgProp.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201805230940302_first.resx">
+      <DependentUpon>201805230940302_first.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
